rigidbody: Fix [#34108] Rigid body with no polygons crashes blender

Fall back to using box shape in case creating shape from mesh fails.